# terrasacha-contracts

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  ContratDetails.md  DOCS_EXTRACTION_SUMMARY.md  DOCS_REPOSITORY_CREATED.md  DOCS_github_actions.yml  DOCS_mkdocs.yml  Dockerfile  Dockerfile.postgres  HOW_TO_EXTRACT_DOCS.md  PUSH_DOCS_TO_GITHUB.sh  PUSH_NOW.md  README.md  README_PUSH_DOCS.md  SETUP_NEW_DOCS_REPO.md  VALIDATIONS.md  alembic.ini  deploy-docs.sh  docker-compose.yml  docker-entrypoint.sh  docker-run.md  extract-docs.sh  index.html  makefile  mkdocs.yml  pyproject.toml  run-api.sh  run-postgres.sh  sitemap.xml  stop-all.sh
.claude/commands/: build-contracts.md  deploy-testnet.md  security-review.md  test-validators.md
alembic/: env.py
alembic/versions/: 15b3f199b90e_migrate_wallet_id_to_pkh.py  234839046d28_initial_tables.py  2d78829cde30_update_wallet_sessions_schema.py  2f4e22895181_initial_database_schema.py  432bee626562_add_built_and_signed_transaction_status.py  45eec720154e_change_transaction_pk_to_tx_hash.py  8527133d0d25_improved_schema_shared_enums_single_tx_.py  93acdb8c9c24_change_contract_primary_key_from_id_to_.py  983801d57edd_make_tx_hash_nullable.py  bd405f30c556_add_source_code_and_compilation_fields_.py  de054b526e86_rename_payment_key_hash_to_id.py  ed70b125a093_add_wallet_security_and_session_.py  f17d6a2fa8b5_add_two_stage_transaction_fields.py
api/: README.md  __init__.py  config.py  enums.py  main.py
api/database/: README.md  __init__.py  connection.py  models.py  multi_tenant_manager.py  tenant_context.py
api/database/repositories/: contract.py  project.py  protocol.py  transaction.py  wallet.py
api/dependencies/: admin.py  auth.py  chain_context.py  tenant.py
api/minting-policies/: index.html
api/registries/: __init__.py  contract_definitions.py  contract_registry.py
api/routers/admin/: __init__.py  tenant_contracts.py  tenants.py
api/routers/api_v1/: api.py
api/schemas/: asset.py  contract.py  transaction.py  wallet.py
api/services/: admin_service_mongo.py  contract_registry_service.py  contract_service.py  contract_service_mongo.py  session_cleanup_service.py  session_manager.py  token_service.py  transaction_service.py  transaction_service_mongo.py  wallet_service.py  wallet_service_mongo.py
api/tests/: __init__.py  assertions.py  conftest.py  factories.py  mocks.py  test_transaction_endpoints.py  test_wallet_endpoints.py
api/types/: index.html
api/utilities/: index.html
api/utils/: encryption.py  metadata.py  password.py  security.py  session_encryption.py
api/validators/: index.html
architecture/minting-policies/: index.html
architecture/overview/: index.html
architecture/types/: index.html
architecture/validators/: index.html
cardano-menu/: cardano_cli.py
contracts/details/: index.html
contracts/protocol-nfts/: index.html
contracts/protocol-validator/: index.html
contracts/validations/: index.html
copilot/: .workspace
copilot/api/: manifest.yml
copilot/api/addons/: api-cluster-ingress.yml
copilot/environments/addons/: api-cluster.yml
copilot/environments/internal/: manifest.yml
development/build-system/: index.html
development/claude-guide/: index.html
development/cli-tools/: index.html
development/contributing/: index.html
docs/api/: validators.md
docs/architecture/: minting-policies.md  validators.md
docs/business-process/: workflows-mermaid.md
docs/business-process/en/: index.md  phase1-pre-blockchain.md  phase2-certification.md  phase3-grey-tokens.md  phase4-green-tokens.md
docs/business-process/es/: fase1-pre-blockchain.md  fase2-certificacion.md  fase3-tokens-grises.md  fase4-tokens-verdes.md  index-mermaid.md  index.md
docs/contracts/: protocol-nfts.md
docs/development/: build-system.md  claude-guide.md
docs/getting-started/: development.md  installation.md
docs/new/: lightpaper.md  marketplace-green-tokens  platform-registry  processes-details.md
docs/reference/: glossary.md  stakeholders.md  timeline.md
docs/stylesheets/: extra.css
docs/testing/: overview.md
getting-started/development/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
payment-examples/: .env.example  COLOMBIA_PAYMENT_GUIDE.md  EXAMPLES.md  QUICKSTART.md  README.md  requirements.txt
payment-examples/app/: __init__.py  config.py  database.py  main.py
payment-examples/app/models/: __init__.py  payment.py
payment-examples/app/routers/: __init__.py  payments.py  webhooks.py
payment-examples/app/services/: __init__.py  binance_service.py  wompi_service.py
search/: search_index.json
src/artifacts/minting_policies/: grey copy.cbor  grey copy.plutus  grey.cbor  grey.plutus  project_nfts.cbor  project_nfts.plutus  protocol_nfts.cbor  protocol_nfts.plutus  simple_nft.cbor  simple_nft.plutus
src/artifacts/validators/: project.cbor  project.plutus  protocol.cbor  protocol.plutus  simple_validator.cbor  simple_validator.plutus
src/cardano_offchain/: __init__.py  chain_context.py  contracts.py  tokens.py  transactions.py  wallet.py
src/cardano_offchain/menu/: .env.example  cardano_cli.py  menu_formatter.py
src/database/: README.md  connection.py  models.py
src/database/repositories/: __init__.py  base.py  contract.py  project.py  protocol.py  transaction.py  wallet.py
src/scripts/: build_contracts.py
src/terrasacha_contracts/: types.py  util.py
src/terrasacha_contracts/minting_policies/: authentication_nfts.py  (+6 more)
src/tests/: __init__.py  conftest.py  test_protocol_validator.py
src/utils/: helpers.py  types.py  utils.py
terrasacha-docs-ready-to-push/: .gitignore  README.md  REPOSITORY_CREATION_SUMMARY.md  requirements.txt
terrasacha-docs-ready-to-push/docs/: index.md
testing/overview/: index.html
testing/running-tests/: index.html
tests/: cardano_app.py  cardano_cli.py  menu_formatter.py  test_cardano_app.py  test_cardano_offchain.py  test_contracts.py  test_project.py  test_protocols.py
tests/ledger/: __init__.py
tests/menu/: .env.example  cardano_cli.py  menu_formatter.py
(+22 files in other folders)
